Production State's Leftover Removal

--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
 
   <body>
 
-    <!-- Pre Loader -->
-    <div id="loader-wrapper">
-      <div id="loader"></div>
-      <div class="loader-section section-left"></div>
-      <div class="loader-section section-right"></div>
-    </div>
-
     <!-- Header -->
     <nav>
       <div class="nav-wrapper black">
@@ -213,8 +206,9 @@
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
-    <script src="js/init.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/headline.js"></script>
+    <script src="js/timeline.js"></script>
 
   </body>
 </html>
