--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <link rel="shortcut icon" href="img/favicon.ico"/>
     <title>Muhammad Zakir</title>
 
     <!-- CSS  -->
@@ -85,9 +86,9 @@
         </div>
 
         <div class="cd-timeline-content">
-          <h2>Hello World</h2>
+          <h5 class="grey-text text-darken-4">Hello World</h5>
           <p>I'm born on the 24th of June in 1996 at Jakarta, I've a little brother which is born around 4 years after me.</p>
-          <span class="cd-date white-text">1996</span>
+          <span class="cd-date red-text">1996</span>
         </div>
       </div>
 
@@ -96,9 +97,9 @@
         </div>
 
         <div class="cd-timeline-content">
-          <h2>Kindergarten</h2>
+          <h5 class="grey-text text-darken-4">Kindergarten</h5>
           <p>My "Hello World" has been developed a little bit more, now i know some variables around me.</p>
-          <span class="cd-date white-text">2001 - 2002</span>
+          <span class="cd-date red-text">2001 - 2002</span>
         </div>
       </div>
 
@@ -107,9 +108,9 @@
         </div>
 
         <div class="cd-timeline-content">
-          <h2>Elementary School</h2>
+          <h5 class="grey-text text-darken-4">Elementary School</h5>
           <p>This is when i'm learning the fundamentals of everything like maths, indonesian languange, science, etc.</p>
-          <span class="cd-date white-text">2002 - 2008</span>
+          <span class="cd-date red-text">2002 - 2008</span>
         </div>
       </div>
 
@@ -118,9 +119,9 @@
         </div>
 
         <div class="cd-timeline-content">
-          <h2>Junior High School</h2>
+          <h5 class="grey-text text-darken-4">Junior High School</h5>
           <p>Not so much differrent from Elementary School, It's just like an advanced version of it.</p>
-          <span class="cd-date white-text">2008 - 2011</span>
+          <span class="cd-date red-text">2008 - 2011</span>
         </div>
       </div>
 
@@ -129,9 +130,9 @@
         </div>
 
         <div class="cd-timeline-content">
-          <h2>Senior High School</h2>
+          <h5 class="grey-text text-darken-4">Senior High School</h5>
           <p>Literally just an advanced version of Junior High School, the only differrence is now i can ride a motorcycle, yahoo!.</p>
-          <span class="cd-date white-text">2011 - 2014</span>
+          <span class="cd-date red-text">2011 - 2014</span>
         </div>
       </div>
 
@@ -141,9 +142,9 @@
         </div>
 
         <div class="cd-timeline-content">
-          <h2>Gunadarma University</h2>
+          <h5 class="grey-text text-darken-4">Gunadarma University</h5>
           <p>I've decided to take a Bachelor Degree on <em>Information Systems</em>. I've been dreaming about developing a video game without realizing how it really would be until i've realized how "Tricky" would it be to do so and not for long i'm started to be in love with <em>Web Development</em> and <em>Security</em>.</p>
-          <span class="cd-date white-text">2014 - Now</span>
+          <span class="cd-date red-text">2014 - Now</span>
         </div>
       </div>
 
@@ -153,9 +154,9 @@
         </div>
 
         <div class="cd-timeline-content">
-          <h2>Gunadarma University's Informatics Engineering Laboratory</h2>
+          <h5 class="grey-text text-darken-4">Gunadarma University's Informatics Engineering Laboratory</h5>
           <p>After a year in univeristy, I'm interested to be an assistant in here to learn lots more about IT related stuff and expanding my connections while I'm at it.</p>
-          <span class="cd-date white-text">2015 - Now</span>
+          <span class="cd-date red-text">2015 - Now</span>
         </div>
       </div>
 
@@ -180,6 +181,7 @@
         <br>
         <h6 class="center">Special thanks to <a target="_blank" href="https://codyhouse.co/">Cody House</a> for the <a target="_blank" href="https://codyhouse.co/gem/css-animated-headlines/">Animated Headlines</a> and the <a target="_blank" href="https://codyhouse.co/gem/vertical-timeline/">Vertical Timeline</a></h6>
         <h6 class="center"><a target="_blank" href="http://www.flaticon.com/packs/social-media-icons">Social Media Icon</a>'s Credits goes to <a target="_blank" href="http://www.flaticon.com/authors/freepik">Freepik</a> from <a target="_blank" href="http://www.flaticon.com/">Flaticon</a></h6>
+        <h6 class="center">Favicon generated with <a target="_blank" href="http://antifavicon.com/">Antifavicon</a></h6>
       </section>
     </div>
 
