Responsiveness Improvement's Fixes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="js/modernizr.min.js"></script>
   </head>
 
-  <body>
+  <body class="grey lighten-5">
 
     <!-- Header -->
     <nav>
@@ -42,41 +42,45 @@
 
     <!-- About Me-->
     <div class="divider"></div>
-    <article id="about" class="container scrollspy">
-      <h4 class="center">A Little About Me</h4>
-      <div class="center">
-        <img class="circle" width="100" height="100" src="img/me.jpg" alt="A Photo Me" />
+    <div class="white">
+      <article id="about" class="container scrollspy">
+        <h4 class="center">A Little About Me</h4>
+        <div class="center">
+          <img class="circle" width="100" height="100" src="img/me.jpg" alt="A Photo Me" />
+        </div>
+        <h6>
+          Hi, my name is Muhammad Zakir and I'm from Indonesia, I lived in the capital city of Indonesia which
+          some of you might already know that it was Jakarta. I'm currently taking a Bachelor Degree in Information Systems
+          at Gunadarma University. I'm in love with <em>Web Development</em> and I'm a little fans of <em>Security</em>.
+          I'm a kind of a <em>Gamer</em> too in a way, and I'm a fans of an anime called <em>One Piece</em>.
+          I'm an <em>Open Source</em> lover too, I'm a <em>Linux</em> user, to be exactly I'm using <em>Ubuntu GNOME</em> on
+          my notebook for my daily usage.
+        </h6>
+
+        <h6>
+          I'm currently interested in <em>Python</em>, especially <em>Flask</em> for the <em>Web Development</em> side.
+          I'm interested in the two of them because of the power of <em>Python</em> itself and the freedom from <em>Flask</em>.
+          For the <em>Front-End</em> side, I love to use <em>MaterializeCSS</em> because I'm in love with Material Design.
+          Beside all of those things, I like <em>IoT</em> stuff and some other related stuff that i could make use of for a tons
+          of things like <em>Wake on Lan</em>, <em>Expert Systems</em>, <em>Game Development</em>, etc.
+          By the way, feel free to ask me about anything that I might be any kind of help to you or even just to know a little bit more about me.
+        </h6>
+      </article>
+      <br>
+      <div class="center col s12">
+        <a target="_blank" href="https://www.facebook.com/officialmuhammadzakir"><img class="circle" width="50" height="50" src="img/facebook.svg" alt="Facebook's Logo" /></a>
+        <a target="_blank" href="https://plus.google.com/106236312552791295125"><img class="circle" width="50" height="50" src="img/google-plus.svg" alt="Google Plus's Logo" /></a>
+        <a target="_blank" href="https://www.instagram.com/mzakir1996/"><img class="circle" width="50" height="50" src="img/instagram.svg" alt="Instagram's Logo" /></a>
+        <a target="_blank" href="https://www.linkedin.com/in/muhammadzakir24"><img class="circle" width="50" height="50" src="img/linkedin.svg" alt="LinkedIn's Logo" /></a>
+        <a target="_blank" href="https://path.com/profile/445j6N"><img class="circle" width="50" height="50" src="img/path.svg" alt="Path's Logo" /></a>
+        <a target="_blank" href="https://twitter.com/mhmmdjkr"><img class="circle" width="50" height="50" src="img/twitter.svg" alt="Twitter's Logo" /></a>
+        <a target="_blank" href="https://www.youtube.com/channel/UCr7FLA5mp20RHSFfwFykzBw"><img class="circle" width="50" height="50" src="img/youtube.svg" alt="Youtube's Logo" /></a>
       </div>
-      <h6>
-        Hi, my name is Muhammad Zakir and I'm from Indonesia, I lived in the capital city of Indonesia which
-        some of you might already know that it was Jakarta. I'm currently taking a Bachelor Degree in Information Systems
-        at Gunadarma University. I'm in love with <em>Web Development</em> and I'm a little fans of <em>Security</em>.
-        I'm a kind of a <em>Gamer</em> too in a way, and I'm a fans of an anime called <em>One Piece</em>.
-        I'm an <em>Open Source</em> lover too, I'm a <em>Linux</em> user, to be exactly I'm using <em>Ubuntu GNOME</em> on
-        my notebook for my daily usage.
-      </h6>
-      <h6>
-        I'm currently interested in <em>Python</em>, especially <em>Flask</em> for the <em>Web Development</em> side.
-        I'm interested in the two of them because of the power of <em>Python</em> itself and the freedom from <em>Flask</em>.
-        For the <em>Front-End</em> side, I love to use <em>MaterializeCSS</em> because I'm in love with Material Design.
-        Beside all of those things, I like <em>IoT</em> stuff and some other related stuff that i could make use of for a tons
-        of things like <em>Wake on Lan</em>, <em>Expert Systems</em>, <em>Game Development</em>, etc.
-        By the way, feel free to ask me about anything that I might be any kind of help to you or even just to know a little bit more about me.
-      </h6>
-    </article>
-    <br>
-    <div class="center col s12">
-      <a target="_blank" href="https://www.facebook.com/officialmuhammadzakir"><img class="circle" width="50" height="50" src="img/facebook.svg" alt="Facebook's Logo" /></a>
-      <a target="_blank" href="https://plus.google.com/106236312552791295125"><img class="circle" width="50" height="50" src="img/google-plus.svg" alt="Google Plus's Logo" /></a>
-      <a target="_blank" href="https://www.instagram.com/mzakir1996/"><img class="circle" width="50" height="50" src="img/instagram.svg" alt="Instagram's Logo" /></a>
-      <a target="_blank" href="https://www.linkedin.com/in/muhammadzakir24"><img class="circle" width="50" height="50" src="img/linkedin.svg" alt="LinkedIn's Logo" /></a>
-      <a target="_blank" href="https://path.com/profile/445j6N"><img class="circle" width="50" height="50" src="img/path.svg" alt="Path's Logo" /></a>
-      <a target="_blank" href="https://twitter.com/mhmmdjkr"><img class="circle" width="50" height="50" src="img/twitter.svg" alt="Twitter's Logo" /></a>
-      <a target="_blank" href="https://www.youtube.com/channel/UCr7FLA5mp20RHSFfwFykzBw"><img class="circle" width="50" height="50" src="img/youtube.svg" alt="Youtube's Logo" /></a>
+      <br>
     </div>
-    <br>
 
     <!-- Timeline -->
+    <div class="divider"></div>
     <div class="grey darken-4">
     <h1 class="center white-text">My Timeline</h1>
     <section id="cd-timeline" class="cd-container scrollspy">
@@ -166,24 +170,23 @@
 
 
     <!-- Special Thanks -->
-    <div class="grey lighten-5">
-      <section class="container">
-        <h1 class="center">Powered By</h1>
-        <div class="center col s12">
-          <a target="_blank" href="https://pages.github.com/"><img src="img/github.png" alt="Github's Logo" /></a>
-          <h6><a target="_blank" href="https://pages.github.com/">Github</a></h6>
-        </div>
-        <br>
-        <div class="center col s12">
-          <a target="_blank" href="http://materializecss.com/"><img src="img/materialize.svg" alt="MaterializeCSS's Logo" /></a>
-          <h6><a target="_blank" href="http://materializecss.com/">MaterializeCSS</a></h6>
-        </div>
-        <br>
-        <h6 class="center">Special thanks to <a target="_blank" href="https://codyhouse.co/">Cody House</a> for the <a target="_blank" href="https://codyhouse.co/gem/css-animated-headlines/">Animated Headlines</a> and the <a target="_blank" href="https://codyhouse.co/gem/vertical-timeline/">Vertical Timeline</a></h6>
-        <h6 class="center"><a target="_blank" href="http://www.flaticon.com/packs/social-media-icons">Social Media Icon</a>'s Credits goes to <a target="_blank" href="http://www.flaticon.com/authors/freepik">Freepik</a> from <a target="_blank" href="http://www.flaticon.com/">Flaticon</a></h6>
-        <h6 class="center">Favicon generated with <a target="_blank" href="http://antifavicon.com/">Antifavicon</a></h6>
-      </section>
-    </div>
+    <div class="divider"></div>
+    <section class="container">
+      <h1 class="center">Powered By</h1>
+      <div class="center col s12">
+        <a target="_blank" href="https://pages.github.com/"><img src="img/github.png" alt="Github's Logo" /></a>
+        <h6><a target="_blank" href="https://pages.github.com/">Github</a></h6>
+      </div>
+      <br>
+      <div class="center col s12">
+        <a target="_blank" href="http://materializecss.com/"><img src="img/materialize.svg" alt="MaterializeCSS's Logo" /></a>
+        <h6><a target="_blank" href="http://materializecss.com/">MaterializeCSS</a></h6>
+      </div>
+      <br>
+      <h6 class="center">Special thanks to <a target="_blank" href="https://codyhouse.co/">Cody House</a> for the <a target="_blank" href="https://codyhouse.co/gem/css-animated-headlines/">Animated Headlines</a> and the <a target="_blank" href="https://codyhouse.co/gem/vertical-timeline/">Vertical Timeline</a></h6>
+      <h6 class="center"><a target="_blank" href="http://www.flaticon.com/packs/social-media-icons">Social Media Icon</a>'s Credits goes to <a target="_blank" href="http://www.flaticon.com/authors/freepik">Freepik</a> from <a target="_blank" href="http://www.flaticon.com/">Flaticon</a></h6>
+      <h6 class="center">Favicon generated with <a target="_blank" href="http://antifavicon.com/">Antifavicon</a></h6>
+    </section>
 
     <!-- Footer -->
     <footer class="page-footer black white-text">
