Twitter Username's Update

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a target="_blank" href="https://www.instagram.com/mzakir1996/"><img class="circle" width="50" height="50" src="img/instagram.svg" alt="Instagram's Logo" /></a>
         <a target="_blank" href="https://www.linkedin.com/in/muhammadzakir24"><img class="circle" width="50" height="50" src="img/linkedin.svg" alt="LinkedIn's Logo" /></a>
         <a target="_blank" href="https://path.com/profile/445j6N"><img class="circle" width="50" height="50" src="img/path.svg" alt="Path's Logo" /></a>
-        <a target="_blank" href="https://twitter.com/mhmmdjkr"><img class="circle" width="50" height="50" src="img/twitter.svg" alt="Twitter's Logo" /></a>
+        <a target="_blank" href="https://twitter.com/mzakir24"><img class="circle" width="50" height="50" src="img/twitter.svg" alt="Twitter's Logo" /></a>
         <a target="_blank" href="https://www.youtube.com/channel/UCr7FLA5mp20RHSFfwFykzBw"><img class="circle" width="50" height="50" src="img/youtube.svg" alt="Youtube's Logo" /></a>
       </div>
       <br>
